# e7Tasks

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: main.rs
src/entity/: mod.rs  user.rs
ui/: app-window.slint
