[package]
name = "e7Tasks"
version = "0.1.0"
edition = "2024"

[dependencies]
sea-orm = { version = "1.1.17", features = ["runtime-tokio", "sqlx-sqlite"] }
slint = "1.13.1"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
slint-build = "1.13.1"
